@@ -1278,6 +1278,7 @@ TimeType ruler_step;
  */
 char do_zoom_center; /* from zoombuttons.c 720 */
 char do_initial_zoom_fit; /* from zoombuttons.c 721 */
+char do_initial_zoom_fit_used;
 
 };
 
